feat: 로또 티켓 당첨 수 확인하는 테스트 코드 작성